# pulsar-mpc

./: ATTRIBUTIONS.adoc  CircuitBuilderREADME.adoc  LICENSE  Makefile.am  Makefile.in  README.adoc  aclocal.m4  autogen  configure  configure.ac
.github/workflows/: build_release.bash  build_release.yml
build-aux/: GATBPS_CONFIG_FILE_RULES.am  GATBPS_CONFIG_LATER_RULES.am  GATBPS_CP_RULES.am  GATBPS_DOCKER_BUILD_RULES.am  GATBPS_GIT_ARCHIVE_RULES.am  GATBPS_GIT_BUNDLE_RULES.am  GATBPS_GIT_CLONE_RULES.am  GATBPS_VPATH_SEARCH.am  GATBPS_V_PAD.am  GATBPS_WGET_RULES.am  INPUT_FILTER.sh.in  PACKAGE_STRING.df.in  autogen.ac  autogen.am  cp.am  docbook-dist.am  docbook.am  docker.am  doxygen.am  dvi-dist.am  gatbps-gen-date.sh  gatbps-gen-libtool-c.sh  gatbps-gen-version.sh  gatbps.ac  gatbps.am  git.am  html-dist.am  java-dist.am  javadoc-dist.am  javadoc.am  pdf-dist.am  plaintext-dist.am  plaintext.am  ps-dist.am  wget.am  xml-dist.am  xml.am
build-aux/downloads/: android-commandlinetools-linux-7583922_latest.zip.ag.json  android-ndk-linux-x86_64.zip.ag.json  android-ndk-r19c-linux-x86_64.zip.ag.json  android-ndk-r23b-linux.zip.ag.json  gmp-6.1.2.tar.xz.ag.json  gmp.tar.any.ag.json  nettle-3.4.tar.gz.ag.json  nettle.tar.any.ag.json  openssl-1.1.1d.tar.gz.ag.json  openssl.tar.any.ag.json  rabbitmq-c-0.9.0.tar.gz.ag.json  rabbitmq-c.tar.any.ag.json
include/src/: config.h.in
lib/: libbmc_la.ac  libbmc_la.am  libbmc_la_SOURCES.am
m4/: DEFINE_ALL.m4  DEFINE_AR.m4  DEFINE_AT.m4  DEFINE_AWK.m4  DEFINE_CC.m4  DEFINE_CFLAGS.m4  DEFINE_CPPFLAGS.m4  DEFINE_CXX.m4  DEFINE_CXXFLAGS.m4  DEFINE_DOCKER.m4  DEFINE_DOCKER_BUILD_FLAGS.m4  DEFINE_EXEEXT.m4  DEFINE_EXE_CFLAGS.m4  DEFINE_EXE_CXXFLAGS.m4  DEFINE_EXE_LDFLAGS.m4  DEFINE_GREP.m4  DEFINE_HAVE_AES_NI.m4  DEFINE_HAVE_CFLAG_MAES.m4  DEFINE_HAVE_CFLAG_MSSE4_1.m4  DEFINE_HAVE_CXXFLAG_MAES.m4  DEFINE_HAVE_CXXFLAG_MSSE4_1.m4  DEFINE_HAVE_JNI.m4  DEFINE_LIB_CFLAGS.m4  DEFINE_LIB_CXXFLAGS.m4  DEFINE_LIB_LDFLAGS.m4  DEFINE_LN_S.m4  DEFINE_MAKEINFO.m4  DEFINE_MKDIR_P.m4  DEFINE_OPENSSL.m4  DEFINE_RANLIB.m4  DEFINE_SED.m4  DEFINE_WGET.m4  DEFINE_WITH_AES_NI.m4  DEFINE_WITH_AES_NI_OR_DIE.m4  DEFINE_WITH_JNI.m4  DEFINE_WITH_JNI_OR_DIE.m4  DEFINE_android_ndk_linux_x86_64_zip.m4  DEFINE_gmp_tar_any.m4  DEFINE_nettle_tar_any.m4  DEFINE_rabbitmq_c_tar_any.m4  (+45 more)
parcels/: pulsar-mpc-aarch64-linux-android-api27.ac  pulsar-mpc-aarch64-linux-android-api27.am  pulsar-mpc-x86_64-linux-android-api27.ac  pulsar-mpc-x86_64-linux-android-api27.am
parcels/pulsar-mpc-aarch64-linux-android-api27/builder/: Dockerfile
src/: pulsar-mpc-aar.dockerfile
src/aar/: build.gradle  gradle.properties  settings.gradle
src/aar/gradle/wrapper/: gradle-wrapper.properties
src/aar/pulsar-mpc/: build.gradle.in
src/base/: global_utils.h
src/base/Crypto/Encryption/: aes_utils.cpp  aes_utils.h  linux_encryption_utils.cpp  paillier.cpp  paillier.h
src/base/Crypto/ObliviousTransfer/: oblivious_transfer_utils.cpp  oblivious_transfer_utils.h
src/base/Crypto/RandomNumberGeneration/: deterministic_random_utils.cpp  deterministic_random_utils.h  linux_random_utils.cpp  prg_utils.cpp  prg_utils.h  random_oracle_utils.cpp  random_oracle_utils.h  random_utils.cpp  random_utils.h
src/base/FileReaderUtils/: read_file_utils.cpp  read_file_utils.h
src/base/GenericUtils/: char_casting_utils.cpp  char_casting_utils.h  init_utils.cpp  init_utils.h  linux_mutex.cpp  linux_mutex.h  linux_thread.cpp  linux_thread.h  mutex.cpp  mutex.h  thread.cpp  thread.h  thread_utils.cpp  thread_utils.h
src/base/LoggingUtils/: logging_utils.cpp  logging_utils.h
src/base/MapUtils/: map_utils.cpp  map_utils.h
src/base/MathUtils/: constants.cpp  constants.h  data_structures.cpp  data_structures.h  formula_utils.cpp  formula_utils.h  large_int.cpp  large_int.h  number_conversion_utils.cpp  number_conversion_utils.h
src/base/MathUtils/AbstractAlgebra/: group.cpp  group.h
src/base/Networking/: cookie_socket.cpp  cookie_socket.h  linux_socket.cpp  linux_socket.h  socket.cpp  socket.h  socket_utils.cpp  socket_utils.h
src/base/StringUtils/: string_utils.cpp  string_utils.h
src/base/TestUtils/: test_utils.cpp  test_utils.h  timer_utils.cpp  timer_utils.h
src/bash/: prelude.bash
src/bash/functions/: config_h_get_string.bash  expect_safe_path.bash  gitlab_ci_docker_push_here.bash  install_local_git.bash  make_j.bash  pick_max_procs.bash  sst_ac_append.bash  sst_ac_config_file.bash  sst_ac_include.bash  sst_ag_include.bash  sst_ag_process_leaf.bash  sst_ajh_asciidoctor_document.bash  sst_ajh_build_tree_program_wrapper.bash  sst_ajh_c_cpp_test.bash  sst_ajh_download.bash  sst_ajh_gitbundle.bash  sst_ajh_java_library.bash  sst_ajh_java_program_wrapper.bash  sst_ajh_java_test_suite.bash  sst_am_append.bash  sst_am_distribute.bash  sst_am_distribute_if_not_dir.bash  sst_am_include.bash  sst_am_var_add.bash  sst_am_var_add_unique_file.bash  sst_am_var_add_unique_word.bash  sst_am_var_set.bash  sst_array_cmp.bash  sst_array_from_zterm.bash  sst_array_to_string.bash  sst_barf.bash  sst_centos_get_distro_version.bash  sst_centos_install_raw.bash  sst_centos_install_utility.bash  sst_csf.bash  sst_cygwin_install_raw.bash  sst_cygwin_install_utility.bash  sst_dot_slash.bash  sst_echo_eval.bash  sst_environment_slug.bash  (+45 more)
src/bash/functions/array/: array_contains.bash
src/bash/functions/autogen/: autogen_ac_append.bash  autogen_ac_finish.bash  autogen_ac_start.bash  autogen_am_finish.bash  autogen_am_start.bash  autogen_am_var_append.bash  autogen_am_var_append_files.bash  autogen_print_ac_header.bash  autogen_print_am_header.bash  autogen_texinfo.bash
src/bash/functions/jq/: jq_expect_array.bash  jq_expect_array_or_null.bash  jq_expect_arrays.bash  jq_expect_arrays_or_null.bash  jq_expect_boolean.bash  jq_expect_boolean_or_null.bash  jq_expect_booleans.bash  (+21 more)
src/circuits/: coffeeshop_n_10.function  coffeeshop_n_2.function  coffeeshop_n_3.function  coffeeshop_n_4.function  coffeeshop_n_5.function  coffeeshop_n_6.function  coffeeshop_n_7.function  coffeeshop_n_8.function  coffeeshop_n_9.function
(+23 files in other folders)
