##
## Copyright (C) 2021 Stealth Software Technologies, Inc.
##
## Permission is hereby granted, free of charge, to any person
## obtaining a copy of this software and associated documentation
## files (the "Software"), to deal in the Software without
## restriction, including without limitation the rights to use,
## copy, modify, merge, publish, distribute, sublicense, and/or
## sell copies of the Software, and to permit persons to whom the
## Software is furnished to do so, subject to the following
## conditions:
##
## The above copyright notice and this permission notice shall be
## included in all copies or substantial portions of the Software.
##
## THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
## EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
## OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
## NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
## HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
## WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
## FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
## OTHER DEALINGS IN THE SOFTWARE.
##

## begin_variables

ACLOCAL_AMFLAGS = -I m4

AM_CPPFLAGS = \
  -I src/base \
  -I $(srcdir)/src/base \
$(prevent_a_blank_line)

BUILT_SOURCES =

DISTCLEANFILES =

EXTRA_DIST =

MAINTAINERCLEANFILES =

MOSTLYCLEANFILES =

SUBDIRS =

SUFFIXES =

TESTS =

XFAIL_TESTS =

bin_PROGRAMS =

bin_SCRIPTS =

check_PROGRAMS =

dist_pkgdata_DATA =

include_HEADERS =

info_TEXINFOS =

lib_LTLIBRARIES =

libexec_PROGRAMS =

libexec_SCRIPTS =

nodist_noinst_HEADERS =

nodist_pkginclude_HEADERS =

noinst_HEADERS =

noinst_LIBRARIES =

noinst_LTLIBRARIES =

noinst_PROGRAMS =

pkgdata_DATA =

pkginclude_HEADERS =

pkglibexec_PROGRAMS =

pkglibexec_SCRIPTS =

pkgsysconfdir = $(sysconfdir)/$(PACKAGE_TARNAME)

## end_variables

## begin_includes

include $(srcdir)/lib/libbmc_la.am

## end_includes

## begin_includes

include $(srcdir)/bin/circuit_builder_main.am
include $(srcdir)/build-aux/GATBPS_CONFIG_FILE_RULES.am
include $(srcdir)/build-aux/GATBPS_CONFIG_LATER_RULES.am
include $(srcdir)/build-aux/GATBPS_CP_RULES.am
include $(srcdir)/build-aux/GATBPS_DOCKER_BUILD_RULES.am
include $(srcdir)/build-aux/GATBPS_GIT_ARCHIVE_RULES.am
include $(srcdir)/build-aux/GATBPS_GIT_BUNDLE_RULES.am
include $(srcdir)/build-aux/GATBPS_GIT_CLONE_RULES.am
include $(srcdir)/build-aux/GATBPS_VPATH_SEARCH.am
include $(srcdir)/build-aux/GATBPS_V_PAD.am
include $(srcdir)/build-aux/GATBPS_WGET_RULES.am
include $(srcdir)/build-aux/cp.am
include $(srcdir)/build-aux/docbook-dist.am
include $(srcdir)/build-aux/docbook.am
include $(srcdir)/build-aux/docker.am
include $(srcdir)/build-aux/doxygen.am
include $(srcdir)/build-aux/dvi-dist.am
include $(srcdir)/build-aux/gatbps.am
include $(srcdir)/build-aux/git.am
include $(srcdir)/build-aux/html-dist.am
include $(srcdir)/build-aux/java-dist.am
include $(srcdir)/build-aux/javadoc-dist.am
include $(srcdir)/build-aux/javadoc.am
include $(srcdir)/build-aux/pdf-dist.am
include $(srcdir)/build-aux/plaintext-dist.am
include $(srcdir)/build-aux/plaintext.am
include $(srcdir)/build-aux/ps-dist.am
include $(srcdir)/build-aux/wget.am
include $(srcdir)/build-aux/xml-dist.am
include $(srcdir)/build-aux/xml.am

## end_includes

include $(srcdir)/build-aux/autogen.am
